--- a/html/Boutique.html
+++ b/html/Boutique.html
@@ -22,6 +22,11 @@
     <h1 id = "btq">B</h1>
     <h1 id = "btque">O</h1>
     <h1 id = "boutique">utique</h1>
+    <audio id="myAudio">
+        <source src="../media/Télé shopping theme - la version longue.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+    <img src="../media/volume_mute.png" alt="" id="volume" onclick="volume()">
    </div>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">          
