--- a/html/cgu.html
+++ b/html/cgu.html
@@ -25,7 +25,7 @@
         <p>Vos informations personnelles sont aussi confidentielles que la localisation des Dragon Balls. Nous ne les divulguerons pas à Freezer, Cell ou tout autre ennemi de la confidentialité.
         </p> 
         <br>
-        <h4>Règles de la Chambre Hyperbolique du Temps : </h4>
+        <h4>Règles de la Salle de l'Esprit et du Temps : </h4>
         <p>Vous êtes les seuls responsables de vos actions dans ce monde virtuel. Pas de retour dans le temps pour corriger vos erreurs. Pensez avant de cliquer !</p> 
         <br>
         <h4>Pas de Senzu illégaux : </h4>
@@ -35,7 +35,7 @@
         <p>Tout le contenu sur ce site appartient aux propriétaires respectifs. Ne vous transformez pas en Cell en copiant ou en distribuant sans autorisation. Respectez les droits d'auteur comme vous respectez l'entraînement de Gohan avec Piccolo.</p>
         <br>
         <h4>Kaiô Shin de la Courtoisie : </h4>
-        <p>Soyez respectueux envers les autres utilisateurs comme Ten Shin Han l'est envers Chiaotzu. Pas de discours haineux, de provocations ou de provocations intergalactiques. Nous voulons un univers pacifique, pas un combat de Super Saiyans.</p>
+        <p>Soyez respectueux envers les autres utilisateurs comme Ten Shin Han l'est envers Chaozu. Pas de discours haineux, de provocations ou de provocations intergalactiques. Nous voulons un univers pacifique, pas un combat de Super Saiyans.</p>
         <br>
         <h4>Majin Buu de la Responsabilité : </h4>
         <p>Vous êtes responsables de votre propre matériel et de vos données. Nous ne sommes pas responsables des attaques de cyber-Cell, des virus informatiques ou des attaques du Commando Ginyu sur vos appareils.</p>
