--- a/html/films.html
+++ b/html/films.html
@@ -69,13 +69,13 @@
                         <div class="scene scene--cardM3" onclick=" flip(2)">
                             <div class="cardM">
                                 <div class="cardM__face cardM__face--front bg3">
-                                    <img src="../media/800px-Dragon_Ball_GT_Logo.svg.png" alt="" width="400"
+                                    <img src="../media/800px-Dragon_Ball_GT_Logo.svg.png" alt="" width="300"
                                         height="100">
 
                                 </div>
 
                                 <div class="cardM__face cardM__face--back cardM__face--back3">
-                                    <img src="../media/800px-Dragon_Ball_GT_Logo.svg.png" alt="" width="400"
+                                    <img src="../media/800px-Dragon_Ball_GT_Logo.svg.png" alt="" width="300"
                                         height="100">
                                     <p>100 ans aprés, Pan est grand-mère! Son petit-fils, Goku Junior, a beaucoup de mal
                                         dans la vie, il
@@ -155,7 +155,7 @@
                                 </div>
                                 <div class="cardM__face cardM__face--back cardM__face--back6">
 
-                                    <img src="../Media films/Titre les mercenaires de l'espace.jpg" alt="" height="100">
+                                    <img src="../Media films/Titre_les_mercenaires_de_l_espace-removebg-preview.png" alt="" height="100">
                                     <p>Son Gohan et ses amis participent à un tournoi d'arts martiaux intergalactique qui a lieu dans l'espace. Quand le terrible Bojack et ses sbires se joignent à la fête, tous les combattants s'allient pour les vaincre..</p>
                                     <img src="../Media films/bojack-removebg-preview.png" alt="">
                                     <video src="../Media films/[TRADUCTION] DBZ - Film 09 - Trailer 2 - Les mercenaires de lespace [VOSTFR].mp4" controls></video>
