--- a/html/accueil.html
+++ b/html/accueil.html
@@ -56,6 +56,14 @@
                 </section>
             </a>
             <img src="../media/db-removebg-preview.png" alt="" height="150">
+            <a href="../html/OST.html">
+                <section id="ost" class="vignette" onmouseover="hoverEffect6()" onmouseout="removeHover6()"> 
+                    <div class="rectangle">
+                        <h1 id="texteBoutique">SOUNDTRACKS</h1>
+                    </div>
+                </section>
+            </a>
+            <img src="../media/db-removebg-preview.png" alt="" height="150">
             <a href="../html/Boutique.html">
                 <section id="boutique" class="vignette" onmouseover="hoverEffect5()" onmouseout="removeHover5()"> 
                     <div class="rectangle">
