--- a/html/films.html
+++ b/html/films.html
@@ -174,7 +174,7 @@
 
                                     <img src="../Media films/Titre_Super_Broly-removebg-preview.png" alt="" height="100">
                                     <p>La Terre est en paix après le Tournoi du Pouvoir mais Goku continue à s'entraîner, persuadé qu'il y a des forces encore plus fortes dans l'univers. En effet, Goku et Vegeta vont font face à un nouvel ennemi, le Super Saïyen Légendaire Broly, dans un combat explosif pour sauver notre planète..</p>
-                                    <img src="../Media films/Broly-removebg-preview.png" alt="">
+                                    <img src="../media/BROLIE.png" alt="" height="300px" width="200px">
                                     <video src="../Media films/DRAGON BALL SUPER - BROLY - Bande-annonce Actuellement VF.mp4" controls></video>
                                 </div>
                             </div>
