--- a/html/voeu.html
+++ b/html/voeu.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/voeu.css">
+    <link rel="icon" type="image/png" href="../media/db-removebg-preview.png">
 </head>
 <body>
     <audio src="https://cdn.rawgit.com/alu0100818208/audios/c337d95d/audio.mp3?raw=true" autoplay></audio>
