--- a/html/FAQ.html
+++ b/html/FAQ.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/FAQ.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="icon" type="image/png" href="../media/db-removebg-preview.png">
 </head>
 
 <body>
