--- a/html/cgu.html
+++ b/html/cgu.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/cgu.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="icon" type="image/png" href="../media/db-removebg-preview.png">
 </head>
 
 <body>
