--- a/html/fanArt.html
+++ b/html/fanArt.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
         type="text/css" />
+        <link rel="icon" type="image/png" href="../media/db-removebg-preview.png">
 </head>
 
 <body>
