--- a/html/jeux.html
+++ b/html/jeux.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jeux</title>
     <link rel="stylesheet" href="../css/jeux.css">
+    <link rel="icon" type="image/png" href="../media/db-removebg-preview.png">
 </head>
 
 <body>
