--- a/html/séries.html
+++ b/html/séries.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>séries</title>
+    <link rel="icon" type="image/png" href="../media/db-removebg-preview.png">
 </head>
 
 <body>
