--- a/html/serie.html
+++ b/html/serie.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dgbauniverse.serie</title>
-    <link rel="shorcut icon" href="shenron icone2.jpg">
+    <link rel="shorcut icon" href="../media/shenron_icone2.jpg">
     <link rel="stylesheet" href="../css/serie.css">
 </head>
 <header></header>
